Bug 414417 - Breeze Dark global theme does not define a splash screen
Summary: Breeze Dark global theme does not define a splash screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: 5.18.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-23 10:32 UTC by Patrick Silva
Modified: 2021-03-05 19:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.3
Sentry Crash Report:


Attachments
screenshot (49.93 KB, image/png)
2019-11-23 10:32 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-11-23 10:32:17 UTC
Created attachment 124072 [details]
screenshot

STEPS TO REPRODUCE
1. set global theme to breeze dark in open system settings > global theme
2. open "Startup and shutdown" > "Splash screen" kcm
3. 

OBSERVED RESULT
As we can see in the attached screenshot, "Breeze" splash screen is not highlighted.

EXPECTED RESULT
"Breeze" splash screen is highlighted.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.17.80
KDE Frameworks Version: 5.65.0
Qt Version: 5.13.2
Comment 1 Cyril Rossi 2020-04-07 08:20:17 UTC
Can reproduce.

When applying a global theme, the KCM Look and Feel does not check if there is a specific splash screen associated with the theme but just write the plugin name in ksplashrc.
Comment 2 Cyril Rossi 2020-04-14 08:17:52 UTC
https://phabricator.kde.org/D28656
Comment 3 Cyril Rossi 2020-04-22 14:44:10 UTC
Git commit dacb3a8bdd206ec14a588bb25b37caa48c3b36aa by Cyril Rossi.
Committed on 22/04/2020 at 14:43.
Pushed by crossi into branch 'Plasma/5.18'.

KCM LookAndFeel check if splash screen is provided before applying it.

Summary:
* While saving a new global theme, don't set splash screen if none is provided, leave the current one.
* KSplash kcfg set default to breeze instead of the current lnf theme which may not contain a splash screen.

Test Plan:
* Open LookAndFeel KCM, apply Breeze Dark, then open Splash screen KCM, Breeze should be highlighted.
* Open splash screen KCM, select none, click on defaults, Breeze should be selected.

Reviewers: #plasma, ervin, bport, meven, ngraham

Reviewed By: ervin, ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28656

M  +1    -4    kcms/ksplash/splashscreensettings.kcfg
M  +4    -1    kcms/lookandfeel/kcm.cpp

https://commits.kde.org/plasma-desktop/dacb3a8bdd206ec14a588bb25b37caa48c3b36aa
Comment 4 Patrick Silva 2020-05-02 12:40:50 UTC
I have just built 5.18 branch of plasma-dsktop on Arch Linux,
this issue is not completely fixed.

1. make sure your current global theme is Breeze
2. open system settings > startup and shutdown > splash screen
3. set splash screen to "None" or a third-party one
4. go to Global Theme kcm and apply Breeze Dark theme
5. go back to startup and shutdown > splash screen KCM and you will see
the splash screen chosen in the step 3 highlighted instead of Breeze one
Comment 5 Cyril Rossi 2020-05-04 12:12:48 UTC
Breeze Dark theme does not provide a splash screen, nor (correct me if I'm wrong) does not reference any, so when set by the KCM look and feel, the splash screen is left unchanged.
Comment 6 Patrick Silva 2020-05-04 12:30:44 UTC
Really there is no "Breeze Dark" splash screen available in the respective KCM.
If I'm using a thirdy-party global theme with a splash screen completely different of the one provided by Breeze global theme and then I set global theme to Breeze dark, I will see a splash screen that does not match the Breeze and Breeze Dark styles after login.
This looks a bit weird to me, but I'm not sure if the fact that Breeze Dark global theme does not set any splash screen is intentional or not.
Comment 7 Nate Graham 2020-05-04 13:08:30 UTC
So perhaps the bug here is that the Breezew Dark global theme should specify the Breeze splash screen.
Comment 8 Cyril Rossi 2020-05-05 14:28:30 UTC
From my understanding, there is 2 things :

* Breeze Dark (or other theme) may specify another splash, because it is not built-in. In that case we would like to use the one from Breeze.

* Make the KCM LnF able to apply the specified splash screen. Currently, it checks if one is embedded in the package in order to apply it.
Comment 9 Bug Janitor Service 2021-02-26 15:48:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/87
Comment 10 Nate Graham 2021-03-05 19:36:20 UTC
Git commit 35f8d5274d9ee2ac55ef36bfbe51b5d441136f92 by Nate Graham.
Committed on 05/03/2021 at 19:34.
Pushed by ngraham into branch 'master'.

Correct global theme metadata

- "Breeze Dark" color scheme was renamed to "BreezeDark"
- Specify a splash screen
- Spacify a wallpaper
FIXED-IN: 5.21.2

M  +7    -1    lookandfeel.dark/contents/defaults
M  +6    -0    lookandfeel.twilight/contents/defaults

https://invent.kde.org/plasma/breeze/commit/35f8d5274d9ee2ac55ef36bfbe51b5d441136f92
Comment 11 Nate Graham 2021-03-05 19:36:47 UTC
Git commit 8b4e8250c8cd3f8916c7463652744b40fb95995b by Nate Graham.
Committed on 05/03/2021 at 19:36.
Pushed by ngraham into branch 'Plasma/5.21'.

Correct global theme metadata

- "Breeze Dark" color scheme was renamed to "BreezeDark"
- Specify a splash screen
- Spacify a wallpaper
FIXED-IN: 5.21.2


(cherry picked from commit 35f8d5274d9ee2ac55ef36bfbe51b5d441136f92)

M  +7    -1    lookandfeel.dark/contents/defaults
M  +6    -0    lookandfeel.twilight/contents/defaults

https://invent.kde.org/plasma/breeze/commit/8b4e8250c8cd3f8916c7463652744b40fb95995b