KCM LookAndFeel check if splash screen is provided before applying it.

Summary:
BUG: 414417
* While saving a new global theme, don't set splash screen if none is provided, leave the current one.
* KSplash kcfg set default to breeze instead of the current lnf theme which may not contain a splash screen.

Test Plan:
* Open LookAndFeel KCM, apply Breeze Dark, then open Splash screen KCM, Breeze should be highlighted.
* Open splash screen KCM, select none, click on defaults, Breeze should be selected.

Reviewers: #plasma, ervin, bport, meven, ngraham

Reviewed By: ervin, ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28656